2019-08-31  Iain Sandoe  <iain@sandoe.co.uk>

	Backport from mainline.
	2019-06-23  Iain Sandoe  <iain@sandoe.co.uk>

	* gcc.target/powerpc/builtins-2.c: Require VSX hardware support.

2019-08-31  Iain Sandoe  <iain@sandoe.co.uk>

	Backport from mainline.
	2019-06-23  Iain Sandoe  <iain@sandoe.co.uk>

	* gcc.target/powerpc/pr80125.c (foo): Use an unsigned char
	vector explicitly for the vec_perm.

2019-08-31  Iain Sandoe  <iain@sandoe.co.uk>

	Backport from mainline.
	2019-06-23  Iain Sandoe  <iain@sandoe.co.uk>

	* gcc.target/powerpc/pr71785.c: For Darwin, make test non-PIC,
	expect the out-of-line GPR restore, and test specifically for
	absence of branches to local labels.

2019-08-31  Iain Sandoe  <iain@sandoe.co.uk>

	Backport from mainline.
	2019-06-22  Iain Sandoe  <iain@sandoe.co.uk>

	* gcc.target/powerpc/pr64205.c: Require effective target dfp.
	* gcc.target/powerpc/pr79909.c: Likewise.

2019-08-31  Iain Sandoe  <iain@sandoe.co.uk>

	Backport from mainline.
	2019-06-22  Iain Sandoe  <iain@sandoe.co.uk>

	* gcc.target/powerpc/darwin-bool-1.c: Suppress the pedantic
	warning about _Bool.

2019-08-31  Iain Sandoe  <iain@sandoe.co.uk>

	Backport from mainline.
	2019-06-13  Iain Sandoe  <iain@sandoe.co.uk>

	* g++.dg/pr71694.C: Use non-PIC codegen for Darwin m32.

2019-08-31  Iain Sandoe  <iain@sandoe.co.uk>

	Backport from mainline.
	2019-06-13  Iain Sandoe  <iain@sandoe.co.uk>

	* gcc.dg/darwin-minversion-1.c: Use compile rather than link/run.
	* gcc.dg/darwin-minversion-2.c: Likewise.

2019-08-31  Iain Sandoe  <iain@sandoe.co.uk>

	Backport from mainline.
	2019-06-11  Iain Sandoe  <iain@sandoe.co.uk>

	PR testsuite/65364
	* gcc.dg/uninit-19.c (fn1): Adjust target condition for Darwin.
	(fn2): Likewise.

2019-08-31  Iain Sandoe  <iain@sandoe.co.uk>

	Backport from mainline.
	2019-06-06  Iain Sandoe  <iain@sandoe.co.uk>

	* g++.dg/cpp0x/alignas4.C: Amend test to check for zerofill syntax
	on Darwin.

2019-08-31  Segher Boessenkool  <segher@kernel.crashing.org>
